Send a start message

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/less": "",
 		"@types/mongodb": "",
 		"@types/node": "",
+		"@types/route-parser": "",
 		"@types/socket.io": "",
 		"@types/socket.io-client": "",
 		"array-flatten": "",
@@ -28,6 +29,7 @@
 		"jquery-ui": "",
 		"less": "",
 		"mongodb": "",
+		"route-parser": "",
 		"socket.io": "",
 		"ts-node": "",
 		"tsify": "",
