Works, except for canvas size and instructions

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@types/concat-stream": "",
 		"@types/es6-promise": "",
 		"@types/express": "",
+		"@types/fabric": "",
 		"@types/jquery": "",
 		"@types/jqueryui": "",
 		"@types/less": "",
@@ -25,6 +26,7 @@
 		"body-parser": "",
 		"browserify": "",
 		"express": "^4.12.4",
+		"fabric": "",
 		"jquery": "",
 		"jquery-ui": "",
 		"less": "",
