Precompile Less as well

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.0.1",
 	"description": "Just... boobtree",
 	"scripts": {
-		"tsc": "tsc"
+		"tsc": "tsc",
+		"lessc": "lessc"
 	},
 	"dependencies": {
 		"@types/async": "",
