Add short codes to the new game page and the homepage

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"async": "",
 		"body-parser": "",
 		"browserify": "",
+    "crypto-random-string": "",
 		"express": "^4.12.4",
 		"fabric": "",
 		"jquery": "",
