Emergency revert of precompiled Javascript

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
 		"socket.io": "",
 		"ts-node": "",
 		"tsify": "",
-		"tslib": "",
-		"typescript": "",
+		"typescript": "rc",
 		"typescript-simple": ""
 	},
 	"engines": {
